--- a/editor/editor.html
+++ b/editor/editor.html
@@ -32,15 +32,7 @@
 		@decsription
 		등록하기 위한 Form으로 상황에 맞게 수정하여 사용한다. Form 이름은 에디터를 생성할 때 설정값으로 설정한다.
 	-->
-	
-	
-	
-	<form name="tx_editor_form" id="tx_editor_form" action="./post.php" method="post" accept-charset="utf-8">
-	
-	
-	
-	
-	
+	<form name="tx_editor_form" id="tx_editor_form" action="./post.php" method="post" accept-charset="utf-8"></form>
 	<!-- 게시판 글 제목 입력박스  -->
 	<div id="text-input">
                 글제목 : <input type ="text" name = "subject" size ="50">
