--- a/lecture_board/board_insert.html
+++ b/lecture_board/board_insert.html
@@ -1,24 +1,15 @@
 <?php
-include "../call_index.php";
-include "../db.php";
-call_doc();
 session_start();
+include "../header.php";
+include "../body.php";
+include "../db.php";
 $query = "select lecture_num, lecture_title from lecture";
 $result = mysqli_query($conn, $query);
 ?>
-<head>
-	<?php
-		call_header();
-        call_daumEditor();
-	?>
-</head>
-<body>
-<?php
-call_body();
-?>
+
 <div id="container" class="container">
 	<?php
-	call_lnb();
+	include "../lnb.php";
 	?>
 		<div class="user-notice">
 			<strong class="fs16">유의사항 안내</strong>
@@ -698,7 +689,7 @@ call_body();
 </div>
 </div>
 <?php
-call_footer();
+include "../footer.php";
 ?>
 </body>
 </html>
