--- a/member/complete.html
+++ b/member/complete.html
@@ -1,17 +1,11 @@
 <?php
-include "../call_index.php";
-call_doc();
 session_start();
 session_destroy();
-?>
-<head>
-	<?php
-	call_header();
-	?>
-</head>
-<body>
-<?php 
-call_body();
+include "../header.php";
+include "../body.php";
+if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -39,7 +33,7 @@ call_body();
 	</div>
 </div>
 <?php
-call_footer();
+include "./footer.php";
 ?>
 </div>
 </body>
