--- a/member/login.html
+++ b/member/login.html
@@ -1,13 +1,6 @@
 <?php 
-include "../call_index.php";
-call_doc();
+include "../header.php";
 ?>
-<head>
-	<?php
-	call_header();
-	?>
-</head>
-<body>
 <div class="login-section">
 	<div class="bg"></div>
 	<div class="login-inner">
