--- a/member/step_01.html
+++ b/member/step_01.html
@@ -1,15 +1,13 @@
 <?php 
-include "../call_index.php";
-call_doc();
-?>
-<head>
-	<?php
-	call_header();
-	?>
-</head>
-<body>
-<?php
-call_body();
+session_start();
+include "../header.php";
+include "../body.php";
+if(isset($_SESSION['userid'])){
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
+if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -500,7 +498,7 @@ Aqua Auth 컨텐츠의 녹화차단 - Aqua Director 컨텐츠의 다운로드 DR
 </div>
 
 <?php
-call_footer();
+include "../footer.php";
 ?>
 </div>
 <script>
