--- a/member/step_02.html
+++ b/member/step_02.html
@@ -1,17 +1,14 @@
-<?php
-session_start();
-$_SESSION["pin"] = '123456';
-include "../call_index.php";
-call_doc();
-?>
-<head>
-	<?php
-	call_header();
-	?>
-</head>
-<body>
 <?php 
-call_body();
+session_start();
+include "../header.php";
+include "../body.php";
+if(isset($_SESSION['userid'])){
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
+if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
+$_SESSION['pin'] = '123456';
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -63,7 +60,7 @@ call_body();
 	</div>
 </div>
 <?php
-call_footer();
+include "../footer.php";
 ?>
 </div>
 <script>	
