--- a/admin/lecture_update.html
+++ b/admin/lecture_update.html
@@ -1,8 +1,8 @@
 <?php
 session_start();
-include "../call_index.php";
+include "../header.php";
+include "../body.php";
 include "../db.php";
-call_doc();
 $num = $_GET['num'];
 $lecture_query = "select lecture_kind, lecture_title, lecture_teacher, lecture_diffi, lecture_time, lecture_img from lecture where lecture_num=$num";
 $lecture_result = mysqli_query($conn, $lecture_query);
@@ -13,15 +13,6 @@ $lecture_teacher = $lecture_row['lecture_teacher'];
 $lecture_diffi = $lecture_row['lecture_diffi'];
 $lecture_time = $lecture_row['lecture_time'];
 $lecture_img = $lecture_row['lecture_img'];
-?>
-<head>
-	<?php
-		call_header();
-	?>
-</head>
-<body>
-<?php
-call_body();
 ?>
 <div id="container" class="container">
 		<table border="0" cellpadding="0" cellspacing="0" class="tbl-col">
@@ -119,7 +110,7 @@ call_body();
 				<tr>
 					<th scope="col">강의이미지</th>
 					<td>
-						<input type="file" id="lecture_img" name="lecture_img" accept="image/gif, image/jpeg, image/png, image/jpg" />
+						<input type="file" id="lecture_img" name="lecture_img" />
 					</td>
 				</tr>
 			</tbody>
