--- a/member/step_03.html
+++ b/member/step_03.html
@@ -1,19 +1,25 @@
 <?php
-	include "../call_index.php";
-	include "../db.php";
-	call_doc();
 	session_start();
+	include "../header.php";
+	include "../db.php";
+	include "../body.php";
+	if(isset($_SESSION['userid'])){
+		echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+	}
+	if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+		echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+	}
 	$pin = $_POST["pin"];
 	$phone1 = $_POST["phone1"];
 	$phone2 = $_POST["phone2"];
 	$phone3 = $_POST["phone3"];
-	$phone = $phone1.'-'.$phone2.'-'.$phone3;
-	$query = "select phone from member where phone='$phone'";
+	
+	$query = "select phone1, phone2, phone3 from member where phone1='$phone1' and phone2='$phone2' and phone3='$phone3'";
 	$result = mysqli_query($conn, $query);
 	$row = mysqli_fetch_array($result);
 	
 	if($row!=0){
-		echo '<script>alert("등록된 사용자입니다."); location.href="login.html";</script>';
+		echo '<script>alert("등록된 사용자입니다."); location.href="/member/login.html";</script>';
 	}else{
 		if($_SESSION["pin"] == $pin){
 			echo '<script>alert("인증에 성공하였습니다."); </script>';
@@ -22,15 +28,6 @@
 		}
 	}
 	mysqli_close($conn);
-?>
-<head>
-	<?php
-	call_header();
-	?>
-</head>
-<body>
-<?php
-call_body();
 ?>
 <div id="container" class="container-full">
 	<div id="content" class="content">
@@ -119,7 +116,7 @@ call_body();
 									<label>기본주소 <input type="text" class="input-text ml5" id="address1" name="address1" style="width:719px" required/></label>
 								</p>
 								<p class="mt10">
-									<label>상세주소 <input type="text" class="input-text ml5" id="address2" name="address2" style="width:719px" required/></label>
+									<label>상세주소 <input type="text" class="input-text ml5" id="address2" name="address2" style="width:719px"/></label>
 								</p>
 							</td>
 						</tr>
@@ -168,9 +165,10 @@ call_body();
 	</div>
 </div>
 <?php
-call_footer();
+include "../footer.php";
 ?>
 </div>
+</body>
 <script>	
 	function idChk(){
 		var id = document.getElementById("id").value;
@@ -296,5 +294,4 @@ function daum_api() {
         }).open();
     }
 </script>
-</body>
 </html>
