--- a/lecture_board/board_list.html
+++ b/lecture_board/board_list.html
@@ -15,6 +15,7 @@ if(isset($_GET['kind'])){
 }else{
 	$query = "select board_num from board order by board_num desc";
 }
+
 $result = mysqli_query($conn, $query);
 $row = mysqli_num_rows($result);
 					
@@ -159,17 +160,57 @@ if($row == 0){
 								등록된 후기가 없습니다!
 							</td>
 						</tr>';
-					}	
+					}
+					
+					$best_query = "select board_num, board_title, board_satis, uname, lecture_title, lecture_kind from board, member, lecture 
+					where board.member_num=member.member_num and board.lecture_num=lecture.lecture_num order by board_count DESC limit 3";
+					$best_result = mysqli_query($conn, $best_query);
+					while($best_row = mysqli_fetch_array($best_result)){
+						$best_num = $best_row['board_num'];
+						$best_title = $best_row['board_title'];
+						$best_satis = $best_row['board_satis'];
+						$best_uname = $best_row['uname'];
+						$best_lecture_title = $best_row['lecture_title'];
+						$best_lecture_kind = $best_row['lecture_kind'];
+
+						echo '
+							<tr class="bbs-sbj">
+								<td><span class="txt-icon-line"><em>BEST</em></span></td>
+								<td>'.$best_lecture_kind.'</td>
+								<td>
+									<a href="board_read.html?page=1&num='.$best_num.'">
+									<span class="tc-gray ellipsis_line">수강 강의명 : '.$best_lecture_title.'</span>
+									<strong class="ellipsis_line">'.$best_title.'</strong>
+									</a>
+								</td>
+								<td>
+									<span class="star-rating">';
+										if($best_satis==5){
+										echo '<span class="star-inner" style="width:100%"></span>';	
+										}else if($best_satis==4){
+										echo '<span class="star-inner" style="width:80%"></span>';
+										}else if($best_satis==3){
+										echo '<span class="star-inner" style="width:60%"></span>';
+										}else if($best_satis==2){
+										echo '<span class="star-inner" style="width:40%"></span>';
+										}else{
+										echo '<span class="star-inner" style="width:20%"></span>';
+										}
+							echo'	</span>
+								</td>
+								<td class="last">'.$best_uname.'</td>
+							</tr>';
+					}
+
+
 					if(isset($kind)){
 						$query2 = "select board_num, board_title, board_satis, uname, lecture_title, lecture_kind from board, member, lecture 
-						where board.id=member.id and lecture.lecture_num = board.lecture_num and lecture.lecture_kind='$kind' order by board_num desc limit $currentLimit, $onePage";
+						where board.member_num=member.member_num and lecture.lecture_num = board.lecture_num and lecture.lecture_kind='$kind' order by board_num desc limit $currentLimit, $onePage";
 					}else{
 						$query2 = "select board_num, board_title, board_satis, uname, lecture_title, lecture_kind from board, member, lecture 
-						where board.id=member.id and board.lecture_num=lecture.lecture_num order by board_num desc limit $currentLimit, $onePage";
+						where board.member_num=member.member_num and board.lecture_num=lecture.lecture_num order by board_num desc limit $currentLimit, $onePage";
 					}	                   
                     $result2 = mysqli_query($conn, $query2);
-					$count = mysqli_num_rows($result2);
-					$i = $count;
                     while($row2 = mysqli_fetch_array($result2)){
 						$board_num = $row2['board_num'];
 						$board_title = $row2['board_title'];
@@ -179,7 +220,7 @@ if($row == 0){
 						$lecture_kind = $row2['lecture_kind'];
 						echo '
 							<tr class="bbs-sbj">
-								<td>'.$i--.'</td>
+								<td>'.$board_num.'</td>
 								<td>'.$lecture_kind.'</td>
 								<td>
 									<a href="board_read.html?page=1&num='.$board_num.'">
@@ -226,7 +267,7 @@ if($row == 0){
 	</div>
 </div>
 <?php
-include "footer.php";
+include "../footer.php";
 ?>
 </div>
 </body>
