--- a/lecture_board/board_list.html
+++ b/lecture_board/board_list.html
@@ -115,19 +115,21 @@ if($row == 0){
 
 		<div class="search-info">
 			<div class="search-form f-r">
-				<select class="input-sel" style="width:158px">
-					<option value="">분류</option>
-					<option value="">일반직무</option>
-					<option value="">산업직무</option>
-					<option value="">공통역량</option>
-					<option value="">어학 및 자격증</option>
-				</select>
-				<select class="input-sel" style="width:158px">
-					<option value="">강의명</option>
-					<option value="">작성자</option>
-				</select>
-				<input type="text" class="input-text" placeholder="강의명을 입력하세요." style="width:158px"/>
-				<button type="button" class="btn-s-dark">검색</button>
+				<form action="board_search.php?page=1" method="POST">
+					<select class="input-sel" style="width:158px" name="kind">
+						<option value="">분류</option>
+						<option value="일반직무">일반직무</option>
+						<option value="산업직무">산업직무</option>
+						<option value="공통역량">공통역량</option>
+						<option value="어학 및 자격증">어학 및 자격증</option>
+					</select>
+					<select class="input-sel" style="width:158px" name="select">
+						<option value="강의명">강의명</option>
+						<option value="작성자">작성자</option>
+					</select>
+					<input type="text" id="title" name="title" class="input-text" placeholder="강의명을 입력하세요." style="width:158px"/>
+					<input type="submit" class="btn-s-dark" value="검색" onclick="return submitChk()">
+				</form>
 			</div>
 		</div>
 
@@ -270,5 +272,20 @@ if($row == 0){
 include "../footer.php";
 ?>
 </div>
+<script>
+	function submitChk(){
+		var title = document.getElementById("title").value;
+		if(title == ''){
+			alert("강의명을 입력하세요!");
+			return false;
+		}else if(title.length<2){
+			alert("2글자 이상 입력하세요!");
+			return false;
+		}else{
+			return true;
+		}
+	}
+
+</script>
 </body>
 </html>
